<resources>
    <string name="app_name">Address Man</string>
    <string name="contact_name">Contact</string>
    <string name="contact_mobile">Mobile</string>
    <string name="contact_area">Area</string>
    <string name="contact_address">Address</string>
    <string name="contact_save">Save</string>
    <string name="contact_add">Add</string>
    <string name="contact_delete">Delete</string>
    <string name="confirm_delete">Are you sure to DELETE?</string>
    <string name="navigate_modify_call">Navigate, Modify or Call?</string>
    <string name="navigate">Navigate</string>
    <string name="modify">Modify</string>
    <string name="call">Call</string>
</resources>
