<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:orientation="vertical"
              android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/contact_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:id="@+id/etName"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/contact_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:id="@+id/etMobile"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/contact_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView3"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:background="?attr/editTextBackground"
                        android:id="@+id/etArea"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/contact_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        android:maxLines="2"
                        android:id="@+id/etAddress"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>